fix: edit styling to fix horizontal scroll and loyalty level data representation

--- a/src/components/info_block/info_block.module.scss
+++ b/src/components/info_block/info_block.module.scss
@@ -33,6 +33,7 @@
     margin-right: 2vw;
     color: $clr-text-primary;
     &_narrow {
+        text-transform: capitalize;
         margin-right: 0;
         order: 2;
         font-size: 5vw;
