--- a/src/screens/cards_screen/cards_screen.module.scss
+++ b/src/screens/cards_screen/cards_screen.module.scss
@@ -3,7 +3,6 @@
 
 .cardScreen {
     @include centrate($main:start, $cross: stretch, $direction: column);
-    width: 100vw;
     min-height: 100dvh;
     font-family: Arial, sans-serif;
     background-color: $clr-bg-secondary;
